# datatree-experimentation

./: README.md  pyproject.toml
datatree_experimentation/: format_ruff.py
documents/: bug-chunk-auto-not-considered.html
notebooks/: bug-chunk-auto-not-considered.ipynb  bug-chunk-auto-not-considered.py  bug-interp-polynomial-order.ipynb  bug-interp-polynomial-order.md  datatree-doc-data-structures.ipynb  datatree-doc-hierarchical-data.ipynb  datatree-zarr.ipynb  datatree-zarr.md  ds-rename-da.ipynb  ds-rename-da.md  improvement-tree-representation.html  improvement-tree-representation.md  improvement-tree-to-dict.ipynb  test-align.ipynb  to_zarr_inside_map_blocks.ipynb  unexpected-behaviour-dt-from-ds.ipynb  unexpected-behaviour-dt-from-ds.md
